syntax = "proto3";

import "protos/Action.proto";
import "protos/Person.proto";
import "google/protobuf/empty.proto";

package ServiceProtocol;

service ProjectServices {
	rpc CreateProjectRequest (ProjectRequest) returns (ActionResponse);
	rpc GetServicesAvailable (google.protobuf.Empty) returns (ServiceList);
}

message ProjectRequest {
	int32 id = 1;
	Person person = 2;
	ServiceList service_list = 3;
	string message = 4;
}

message ServiceList {
	int32 id = 1;
	repeated Service services = 2;
}
message Service {
	int32 id = 1;
	string description = 2;
}
